--- a/src/styleModules/TaskItem.module.css
+++ b/src/styleModules/TaskItem.module.css
@@ -63,3 +63,10 @@
         font-size: 1.01rem;
   }
 
+  .editbox button{
+    font-size:1.2rem;
+    margin-left:10px;
+    padding :8px;
+    border-radius: 5px;
+    background-color: white;
+  }
